fixed spacing issue by closing row margin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -237,3 +237,7 @@ label {
   width: 7.5%;
   text-align: right;
 }
+
+.row {
+  margin-right: 0;
+}
